fixed whitebar on mobile and reduce container

--- a/refactoring/main.css
+++ b/refactoring/main.css
@@ -7,7 +7,6 @@ Add this into CSS to change font color
     color: rgb(121, 121, 121);
 }
 */
-
 .title, .subtitle, p {
     color: rgb(121, 121, 121);
 }
@@ -56,7 +55,6 @@ Add this into CSS to change font color
 }
 
 /* Bulma Overrides */
-
 .hero-body {
     flex-wrap: wrap;
     padding: 3rem 0 0 0
@@ -77,9 +75,12 @@ iframe {
     width: 100%;
     height: 900px;
 }
+.container {
+    max-width: 1200px;
+}
 
 /* Links */
-a.navbar-item:hover, a.navbar-item.is-active:hover {
+a.navbar-item:hover, a.navbar-item.is-active:hover, .navbar-burger:hover {
     background-color: unset;
     color: #3273dc;
 }
@@ -125,6 +126,9 @@ a.navbar-item:hover, a.navbar-item.is-active:hover {
 
 /* Custom Media Query - Mobile Devices */
 @media only screen and (max-width: 768px) {
+    body {
+        overflow-x: hidden;
+    }
     .project {
         height: unset;
     }
@@ -133,6 +137,7 @@ a.navbar-item:hover, a.navbar-item.is-active:hover {
     }
     .navbar-burger {
         z-index: 1;
+        padding-right: 100px;
     }
     #navbarMenuHeroA {
         width: 100vw;
